--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,37 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Barebones HTML Page</title>
+    <title>My Blog (change).. </title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-    <h1>Hello, World!</h1>
-    <p>This is a barebones HTML page.</p>
+    <header>
+        <h1>My Blog</h1>
+        <nav>
+            <ul>
+                <li><a href="#">Home</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <section class="blog-posts">
+        <article>
+            <h2>Blog Post Title</h2>
+            <p>Posted on January 1, 2023</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec malesuada rutrum lectus nec tristique. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Integer luctus, mauris et tempus feugiat, libero felis rhoncus tellus, ac fringilla tortor nisi vel purus.</p>
+            <a href="#" class="read-more">Read More</a>
+        </article>
+
+        <article>
+            <h2>Another Blog Post</h2>
+            <p>Posted on February 15, 2023</p>
+            <p>Sed id massa nunc. Nunc vulputate magna nec luctus pharetra. Fusce quis tellus ut nisl auctor tristique ut ut est. Sed imperdiet elementum tortor nec tempus. Nam facilisis purus vel diam fringilla aliquet. Ut congue urna ut felis lacinia ullamcorper.</p>
+            <a href="#" class="read-more">Read More</a>
+        </article>
+    </section>
+
+    <footer>
+        <p>&copy; 2023 My Blog. All rights reserved.</p>
+    </footer>
 </body>
 </html>
